<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/default_object_height"
    android:orientation="vertical"
    android:padding="@dimen/default_object_padding">

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_onboard_title"
        android:gravity="center"
        android:textSize="@dimen/default_object_title_text_size"
        android:textAllCaps="true"
        android:paddingTop="@dimen/default_object_padding"
        style="@style/BoldText" />

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_onboard_text_top"
        android:gravity="center"
        android:textSize="@dimen/default_object_subtitle_text_size"
        android:padding="@dimen/default_object_padding"
        style="@style/NormalText" />

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_onboard_text_bottom"
        android:gravity="center"
        android:textSize="@dimen/default_object_subtitle_text_size"
        android:padding="@dimen/default_object_padding"
        style="@style/NormalText" />

    <include layout="@layout/view_button_green" />

</LinearLayout>